--- a/index.html
+++ b/index.html
@@ -38,17 +38,19 @@
     <div class="tela-cadastro">
         <form action="">
             <p class="titulo">Qual a cidade</p>
-            <input type="text" placeholder="Recife" required>
+            <input type="text" class="input-cidade" placeholder="Recife" required>
             <button type="submit">Confirmar</button>
         </form>
 
     </div>
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="./scripts/tela-cadastro.js"></script>
+    <script src="./scripts/conteudo-main.js"></script>
     <script src="./scripts/geolocation.js"></script>
     <script src="./scripts/openweathermap.js"></script>
     <script src="./scripts/dados.js"></script>
-    <script src="./scripts/tela-cadastro.js"></script>
-    <script src="./scripts/conteudo-main.js"></script>
+
+
 </body>
 </html>
